add integration controller test